tests/ok/vector-control-flow-capacity.ari
fn main() -> i64 {
  var assigned: Vec[i64] = [];
  assigned = if true {
    [1, 2, 3]
  } else {
    [4, 5, 6]
  };
  let assigned_len = assigned.len();

  let from_block: Vec[i64] = {
    [7, 8, 9]
  };
  let block_len = from_block.len();

  let left: Vec[i64] = [10, 11, 12];
  let right: Vec[i64] = [13, 14, 15];
  let from_locals: Vec[i64] = if false {
    left
  } else {
    right
  };
  let locals_len = from_locals.len();

  return assigned.capacity() + assigned_len + assigned[2] +
         from_block.capacity() + block_len + from_block[2] +
         from_locals.capacity() + locals_len + from_locals[2];
}
