tests/errors/generic-inference-conflict.ari
fn choose[T](left: T, right: T) -> T {
  return left;
}

fn main() -> i64 {
  return choose(1, true);
}
